# DisectVal

./: .gitignore  DisectVal.spec  README.md  build_exe.bat  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  build-exe.yml
docs/: WEBSITE_SETUP.md
src/disectval/: __init__.py  dev_entry.py  main.py  setup_entry.py  user_entry.py
src/disectval/analysis/: __init__.py  video_analyzer.py
src/disectval/auth/: __init__.py  credentials.py  roles.py
src/disectval/config/: __init__.py  feature_flags.py  settings.py  subscription.py
src/disectval/games/: __init__.py  launcher.py  profiles.py
src/disectval/gui/: __init__.py  dashboard.py  login_page.py  theme.py
src/disectval/training/: __init__.py  sync.py
src/disectval/utils/: __init__.py  valorant_detector.py  windows_checker.py
tests/: __init__.py  test_auth.py  test_config.py  test_valorant_detector.py  test_windows_checker.py
