[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disectval"
version = "0.1.0"
description = "Valorant Gameplay Analysis AI - Analyze, learn, and improve your gameplay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SGM", email = "sgm@disectval.com"}
]
keywords = ["valorant", "gaming", "ai", "analysis", "esports"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.scripts]
disectval = "disectval.main:main"

[project.gui-scripts]
disectval-gui = "disectval.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
